@@ -51,7 +51,8 @@ more. The current long-press features are:
     <li>'Play/pause' buttons - 'stop' playback, i.e. act as a 'stop' button.</li>
     <li>'Repeat off' icon, or the DSTM (infinity) icon - show DSTM (Don't Stop the Music) options.</li>
     <li>Duration label in queue - shows the 'Transfer queue' dialog, if you have 2 or more players.</li>
-    <li>Power icon - shows the 'Sleep' dialog.</li>
+    <li>Power icon (in menu) - shows the 'Sleep' dialog.</li>
+    <li>Player icon (in menu) - shows the 'Synchronise' dialog, if you have 2 or more players.</li>
     <li>'Manage players' menu entry - shows the 'Synchronise' dialog, if you have 2 or more players.</li>
     <li>'Prev track' button - skips X seconds back, keep pressed for multiple skips. The exact skip duration is configurable.</li>
     <li>'Next track' button - skips X seconds forward, keep pressed for multiple skips. The exact skip duration is configurable.</li>
