@@ -2,6 +2,7 @@
 -----
 1. Translation update.
 2. Fix MAI settings button (top right cog icon).
+3. Add long-press on player icon in navigation drawer to open sync dialog.
 
 5.4.0
 -----
